--- a/css/styles.css
+++ b/css/styles.css
@@ -4356,7 +4356,6 @@ textarea.form-control-lg {
   --bs-card-border-width: 1px;
   --bs-card-border-color: var(--bs-border-color-translucent);
   --bs-card-border-radius: 0.375rem;
-  --bs-card-box-shadow: ;
   --bs-card-inner-border-radius: calc(0.375rem - 1px);
   --bs-card-cap-padding-y: 0.5rem;
   --bs-card-cap-padding-x: 1rem;
@@ -4369,6 +4368,7 @@ textarea.form-control-lg {
   --bs-card-group-margin: 0.75rem;
   position: relative;
   display: flex;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
   flex-direction: column;
   min-width: 0;
   height: var(--bs-card-height);
