--- a/css/styles.css
+++ b/css/styles.css
@@ -4870,7 +4870,7 @@ textarea.form-control-lg {
   padding-right: 3rem;
 }
 .alert-dismissible .btn-close {
-  position: absolute;
+  display: none;
   top: 0;
   right: 0;
   z-index: 2;
@@ -11254,7 +11254,6 @@ header.masthead .masthead-heading {
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
   display: flex;
-  position: absolute;
   width: 100%;
   height: 100%;
   background: rgba(255, 200, 0, 0.9);
@@ -11314,7 +11313,7 @@ header.masthead .masthead-heading {
   margin-bottom: 2rem;
 }
 .portfolio-modal .close-modal {
-  position: absolute;
+  display: none;
   top: 1.5rem;
   right: 1.5rem;
   width: 3rem;
