--- a/css/styles.css
+++ b/css/styles.css
@@ -2029,6 +2029,36 @@ progress {
   }
 }
 
+input[type="range"] {
+  -webkit-appearance: none; /* For Chrome and Safari */
+  -moz-appearance: none; /* For Firefox */
+  appearance: none;
+  background: #444; /* Track background color */
+  width: 100%; /* To fill the container */
+  height: 6px; /* Track height */
+  border-radius: 5px; /* Rounded track */
+  cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: #5000e6; /* Custom thumb color */
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  background: #5000e6;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+
 .custom-audio-player {
   display: flex;
   align-items: center;
@@ -2076,6 +2106,27 @@ progress {
 .custom-audio-player:hover .volume-slider {
   opacity: 1;
   transform: translateY(20px);
+}
+
+.download-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.download-icon {
+  width: 22px;
+  height: 20px;
+  filter: invert(29%) sepia(100%) saturate(5000%) hue-rotate(250deg) brightness(90%);
+  transition: transform 0.5s ease;
+}
+
+.download-button:hover .download-icon {
+  transform: scale(1.2);
 }
 
 .form-label {
@@ -3282,6 +3333,29 @@ textarea.form-control-lg {
   opacity: 0;
 }
 
+.fade-in-item {
+  opacity: 0;
+  transform: translateY(20px);
+  visibility: hidden;
+  transition: opacity 0.6s ease-out, transform 1.2s ease-out;
+  will-change: opacity, transform;
+}
+
+.fade-in-item.is-visible {
+  opacity: 1;
+  transform: translateY(0);
+  visibility: visible;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .collapse:not(.show) {
   display: none;
 }
@@ -3390,6 +3464,7 @@ textarea.form-control-lg {
   padding: 10px;
   transition: box-shadow 0.2s ease-out;
   object-fit: cover;
+  /* animation: fadeIn 1s forwards; */
 }
 
 .portfolio-item:hover {
