--- a/css/styles.css
+++ b/css/styles.css
@@ -6046,6 +6046,48 @@ textarea.form-control-lg {
   border-left-color: var(--bs-popover-bg);
 }
 
+@keyframes fadeInLightbox {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+@keyframes fadeOutLightbox {
+  from {
+      opacity: 1;
+  }
+  to {
+      opacity: 0;
+  }
+}
+
+.lightbox-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  cursor: default;
+}
+
+.lightbox-overlay.active {
+  display: flex;
+  animation: fadeInLightbox 1s ease-in-out;
+}
+
+.lightbox-img {
+  max-width: 90%;
+  max-height: 90%;
+}
+
 /* rtl:end:ignore */
 .popover-header {
   padding: var(--bs-popover-header-padding-y) var(--bs-popover-header-padding-x);
