no more javascript void

--- a/css/styles.css
+++ b/css/styles.css
@@ -736,6 +736,7 @@ input[type="range"]::-moz-range-thumb {
   font-weight: var(--bs-nav-link-font-weight);
   color: var(--bs-nav-link-color);
   text-decoration: none;
+  cursor: pointer;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
