--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ body {
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
   background-color: var(--bs-body-bg);
-  -webkit-text-size-adjust: 100%;
+  -text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -770,8 +770,9 @@ input[type="range"]::-moz-range-thumb {
   --bs-navbar-toggler-border-radius: 0.375rem;
   --bs-navbar-toggler-focus-width: 0.25rem;
   --bs-navbar-toggler-transition: box-shadow 0.15s ease-in-out;
-  background: rgba(0, 0, 0, 0.4) !important; /* Slight black tint */
-  backdrop-filter: blur(10px) !important;     /* Keeps the frosted glass effect */
+  background: rgba(0, 0, 0, 0.4) !important;
+  -webkit-backdrop-filter: blur(10px) !important;
+  backdrop-filter: blur(10px) !important;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   position: relative;
   display: flex;
@@ -1151,6 +1152,7 @@ input[type="range"]::-moz-range-thumb {
   font-size: 3rem;
   color: #fff;
   cursor: pointer;
+  -webkit-user-select: none;
   user-select: none;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
