--- a/css/styles.css
+++ b/css/styles.css
@@ -1558,13 +1558,13 @@ header.masthead {
 
 .masthead-video {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  z-index: 0;
-  pointer-events: none;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  height: auto !important;
+  object-fit: cover !important;
+  z-index: 0 !important;
+  pointer-events: none !important;
 }
 
 @keyframes gradientAnimation {
