--- a/css/styles.css
+++ b/css/styles.css
@@ -1558,13 +1558,17 @@ header.masthead {
 
 .masthead-video {
   position: absolute;
-  top: 0 !important;
-  left: 0 !important;
-  width: 100% !important;
-  height: auto !important;
-  object-fit: cover !important;
-  z-index: 0 !important;
-  pointer-events: none !important;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+
+  z-index: 0;
+  pointer-events: none;
 }
 
 @keyframes gradientAnimation {
