--- a/css/styles.css
+++ b/css/styles.css
@@ -54,10 +54,10 @@
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: Roboto Slab, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  --bs-body-font-family: Roboto Slab, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
@@ -1399,13 +1399,36 @@ p {
   padding: 6rem 0;
 }
 
+.preloader {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(80, 0, 230);
+  font-family: var(--bs-body-font-family);
+  font-size: 3rem;
+  flex-direction: column;
+  gap: 2rem;  
+}
+
+.preloader-text {
+  font-family: var(--bs-body-font-family);
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
 .content-page-section {
   background: url('../assets/img/webs/SectionBackground.png') no-repeat center center fixed;
   background-size: cover;
   color: #f0f0f0;
   padding: 6rem 6rem;
 }
-
 
 .contact-page-section {
   background: url('../assets/img/map-image.png') no-repeat center;
@@ -1509,6 +1532,7 @@ p {
   font-weight: bold;
   text-align: left;
 }
+
 .table-container {
   overflow-x: auto;
   box-shadow: 0 0 10px rgba(0,0,0,0.7);
